--- a/Tamagotchi/Views/Home/Index.cshtml
+++ b/Tamagotchi/Views/Home/Index.cshtml
@@ -1,1 +1,9 @@
-<img src="~/img/" + @Model.GetImage() alt="all emotions" />
+@{
+  Layout = "_Layout";
+}
+
+<div class="container">
+  <form action="/object" method="post">
+    <button type="submit" name="start">Play!</button>
+  </form>
+</div>
