Add time method; bugs fixes

--- a/Tamagotchi/Views/Home/Index.cshtml
+++ b/Tamagotchi/Views/Home/Index.cshtml
@@ -2,8 +2,10 @@
   Layout = "_Layout";
 }
 
+<p>Having a digital pet is a big responsibility. Are you sure you are ready?</p>
+
 <div class="container">
   <form action="/object" method="post">
-    <button type="submit" name="start">Play!</button>
+    <button type="submit" name="start">Yes!</button>
   </form>
 </div>
